--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,72 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.5020, 0.2706, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.4353, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.1020, 0.0000, 0.0000]]],\n",
-       "\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "\n",
-       "        [[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          ...,\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]]]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classes: ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
+      "num_classes: 10\n"
+     ]
     }
    ],
    "source": [
@@ -107,9 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_input_channels = 1\n",
     "num_output_channels = 16\n",
@@ -119,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,11 +102,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataloader_train = DataLoader(train_data, shuffle=True, batch_size = 10,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(optimizer, net, num_epochs):\n",
+    "    num_processed = 0\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    for epoch in range(num_epochs):\n",
+    "        running_loss = 0.0\n",
+    "        num_processed = 0\n",
+    "        for feature,label in dataloader_train:\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = net(feature)\n",
+    "            loss = criterion(outputs, label)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "            num_processed += len(label)\n",
+    "        print(f\"epoch:{epoch}, loss:{running_loss/num_processed}\")\n",
+    "        \n",
+    "    train_loss = running_loss / len(dataloader_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Net' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/scottpitcher/Desktop/python/Github/Clothing-Classification-PyTorch/Clothing_Classifier.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/scottpitcher/Desktop/python/Github/Clothing-Classification-PyTorch/Clothing_Classifier.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m net \u001b[39m=\u001b[39m Net(num_classes)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/scottpitcher/Desktop/python/Github/Clothing-Classification-PyTorch/Clothing_Classifier.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m optimizer \u001b[39m=\u001b[39m optim\u001b[39m.\u001b[39mAdam(net\u001b[39m.\u001b[39mparameters(), lr \u001b[39m=\u001b[39m \u001b[39m0.001\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Net' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "net = MultiClassImageClassifier(num_classes)\n",
+    "optimizer = optim.Adam(net.parameters(), lr = 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_model(\n",
+    "    optimizer=optimizer,\n",
+    "    net=net,\n",
+    "    num_epochs=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader_test = DataLoader(test_data,\n",
+    "                            shuffle = False,\n",
+    "                            batch_size =10,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the metrics\n",
+    "accuracy_metric = Accuracy(task='multiclass', num_classes=num_classes)\n",
+    "precision_metric = Precision(task='multiclass', num_classes=num_classes, average=None)\n",
+    "recall_metric = Recall(task='multiclass', num_classes=num_classes, average=None)\n",
+    "\n",
+    "# Run model on test set\n",
+    "net.eval()\n",
+    "predicted = []\n",
+    "for i, (features, labels) in enumerate(dataloader_test):\n",
+    "    output = net.forward(features.reshape(-1, 1, image_size, image_size))\n",
+    "    cat = torch.argmax(output, dim=-1)\n",
+    "    predicted.extend(cat.tolist())\n",
+    "    accuracy_metric(cat, labels)\n",
+    "    precision_metric(cat, labels)\n",
+    "    recall_metric(cat, labels)\n",
+    "\n",
+    "# Compute the metrics\n",
+    "accuracy = accuracy_metric.compute().item()\n",
+    "precision = precision_metric.compute().tolist()\n",
+    "recall = recall_metric.compute().tolist()\n",
+    "print('Accuracy:', accuracy)\n",
+    "print('Precision (per class):', precision)\n",
+    "print('Recall (per class):', recall)"
    ]
   }
  ],
