--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title\n",
-    "## Sub\n",
-    "### Sub sub\n",
-    "#### Subbbb"
+    "# E-Commerce Clothing Classifer\n",
+    "## Image classification using convolutional neural networks in PyTorch"
    ]
   },
   {
