--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -25,6 +32,13 @@
     "import matplotlib.pyplot as plt\n",
     "from torchvision import datasets\n",
     "import torchvision.transforms as transforms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using data from FashionMNIST publically available clothing image datasets"
    ]
   },
   {
