--- a/Clothing_Classifier.ipynb
+++ b/Clothing_Classifier.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +91,7 @@
        "28"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,27 +113,24 @@
     "  \n",
     "    def __init__(self, num_classes):\n",
     "        super(MultiClassImageClassifier, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(num_input_channels, num_output_channels, kernel_size=3, stride=1, padding=1)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.maxpool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        self.flatten = nn.Flatten()\n",
     "\n",
-    "        # Create a fully connected layer\n",
-    "        self.fc = nn.Linear(num_output_channels * (image_size//2)**2, num_classes)\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Conv2d(num_input_channels, num_output_channels, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(num_output_channels * (image_size//2)**2, num_classes) # Create a fully connected layer\n",
+    "        )\n",
     "        \n",
     "    def forward(self, x):\n",
     "        # Pass inputs through each layer\n",
-    "        x = self.conv1(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.maxpool(x)\n",
-    "        x = self.flatten(x)\n",
-    "        x = self.fc(x)\n",
+    "        x = self.classifier(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:0, loss:0.040481819106684996\n"
+      "epoch:0, loss:0.04287870064123999\n"
      ]
     }
    ],
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8819000124931335\n",
-      "Precision (per class): [0.8315163254737854, 0.9674556255340576, 0.7912395000457764, 0.8257372379302979, 0.8436123132705688, 0.9748743772506714, 0.7478991746902466, 0.9589473605155945, 0.9397129416465759, 0.9240986704826355]\n",
-      "Recall (per class): [0.8389999866485596, 0.9810000061988831, 0.8489999771118164, 0.9240000247955322, 0.765999972820282, 0.9700000286102295, 0.6230000257492065, 0.9110000133514404, 0.9819999933242798, 0.9739999771118164]\n"
+      "Accuracy: 0.8744999766349792\n",
+      "Precision (per class): [0.7773882746696472, 0.9906736016273499, 0.846069872379303, 0.842056930065155, 0.7206119298934937, 0.981249988079071, 0.7776097059249878, 0.9347389340400696, 0.9805725812911987, 0.9211026430130005]\n",
+      "Recall (per class): [0.8870000243186951, 0.9559999704360962, 0.7749999761581421, 0.9169999957084656, 0.8949999809265137, 0.9419999718666077, 0.5139999985694885, 0.9309999942779541, 0.9589999914169312, 0.968999981880188]\n"
      ]
     }
    ],
